--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase-functions": "^4.2.1",
     "nitropack": "npm:nitropack-edge@latest",
     "ofetch": "^1.0.1",
-    "ufo": "^1.1.1"
+    "ufo": "^1.1.1",
+    "h3": "^1.5.0"
   },
   "engines": {
     "node": "14.x || >=16.x"
